--- a/.travis.yml
+++ b/.travis.yml
@@ -52,13 +52,13 @@ install:
   - npm install -g snyk-gradle-plugin
 
 stages:
-  - name: gradle
-    if:  branch = master
   - name: build
     if:  branch = master
   - name: test
     if:  branch = master
   - name: scan
+    if: branch = master
+  - name: gradle
     if: branch = master
   - name: snappah
     if:  branch = master AND NOT type = pull_request
@@ -140,7 +140,7 @@ jobs:
         - echo $STAGE
         - ./run-snyk.sh
 
-    - stage: scan
+    - stage: gradle
       name: "gradle sonarscan (jdk11)"
       jdk: openjdk11
       script:
