added gradle build to travis (#138)
* added gradle build to travis

* Dropped java 11

* added gradle build to travis

* Adding java11

* Add java11 to sonarscan

* removed extra blank lines

* removed duplicate scripts calls

* Build with gradle and java-11

* refactored scan acitvity

* first pass at gradle sonar scan code

* possible junit-jupiter-apr fix

* source and target compatibility change

* revert source and target compatibility change

* gradle and travis file changes

* gradle and travis file changes

* sonar testing

* sonar testing

* sonar testing

* sonar testing

* sonar testing

* clean up

* sonar.qualitygate.wait=true added

* small travis changes

Co-authored-by: ndp-opendap <ndp@opendap.org>

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,26 @@ plugins {
     id 'war'
     id 'eclipse'
     id 'idea'
+    id "org.sonarqube" version "3.3"
+}
+
+sonarqube {
+    properties {
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.projectKey", "opendap-olfs"
+        property "sonar.projectName", "olfs"
+        property "sonar.projectVersion", "${OLFS_VERSION}"
+        property "sonar.organization", "opendap"
+        property "sonar.inclusions", "src"
+        property "sonar.exclusions", "src/opendap/Coverity_Model.java," +
+                                    "src/opendap/experiments/**/*.java," +
+                                    "src/opendap/metacat/**/*.java," +
+                                    "src/opendap/aws/**/*.java," +
+                                    "src/opendap/noaa_s3/**/*.java," +
+                                    "src/opendap/**/*Test.java"
+        property "sonar.java.binaries", "build"
+        property "sonar.java.libraries", "lib/*.jar"
+    }
 }
 
 // used to auto publish scan results in travis or travis hangs. SBL 1.12.22
@@ -32,7 +52,7 @@ if (hasProperty('buildScan')) {
     buildScan {
         termsOfServiceUrl = 'https://gradle.com/terms-of-service'
         //change to 'no' if we don't want to publish scan results. SBL 1.12.22
-        termsOfServiceAgree = 'yes'
+        termsOfServiceAgree = 'no'
     }
 }
 
@@ -40,8 +60,8 @@ group = 'org.opendap'
 description = 'The OLFs build'
 
 // version = '0.1.0-SNAPSHOT'
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     // For just about everything except...
@@ -172,7 +192,7 @@ dependencies {
     // NB: https://docs.gradle.org/current/userguide/declaring_dependencies.html
     // jhrg 9/8/21
 
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0'
     testImplementation group: 'org.objenesis', name: 'objenesis', version: '3.2'
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6'
 
