TravisCI tweak to snapshot and trigger downstream builds.

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,9 +61,9 @@ stages:
   - name: scan
     if: branch = master
   - name: snappah
-    if:  branch = master AND NOT type = pull_request
+    if:  branch = master #AND NOT type = pull_request # =~ /^(master|.*-test-deploy)$/
   - name: hyrax-docker-trigger
-    if:  branch = master AND NOT type = pull_request
+    if:  branch = master #AND NOT type = pull_request # =~ /^(master|.*-test-deploy)$/
 
 # caching for gradle
 before_cache:
