--- a/.travis.yml
+++ b/.travis.yml
@@ -246,7 +246,7 @@ deploy:
     skip_cleanup: true
     local_dir: $TRAVIS_BUILD_DIR/package
     on:
-      branch: master
+      branch: /^(master|detect.*Change|.*-test-deploy)$/
       condition: $STAGE =~ ^snappah$
 
 
