--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ services:
 branches:
   only:
     - master
-    - travis
+    - /^(detect.*Change|.*-test-deploy)$/
 
 notifications:
   email:
@@ -53,17 +53,13 @@ install:
 
 stages:
   - name: build
-    if:  branch = master
   - name: test
-    if:  branch = master
   - name: scan
-    if: branch = master
   - name: gradle
-    if: branch = master
   - name: snappah
-    if:  (branch = master AND NOT type = pull_request) OR (branch =~ ^(detect.*Change|.*-test-deploy)$)
+    if: type != pull_request OR branch =~ ^(detect.*Change|.*-test-deploy)$
   - name: hyrax-docker-trigger
-    if:  (branch = master AND NOT type = pull_request) OR (branch =~ ^(detect.*Change|.*-test-deploy)$)
+    if:  type != pull_request OR branch =~ ^(detect.*Change|.*-test-deploy)$
 
 # caching for gradle
 before_cache:
