--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ services:
 branches:
   only:
     - master
+    - detectClientProtcolChange
     - /^(detectClientProtcolChange|.*-test-deploy)$/
 
 notifications:
