--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ language: java
 services:
   - docker
 
-# whitelist
+# safelist
 branches:
   only:
     - master
-    - travis
+    - /^(.*-test-deploy)$/
 
 notifications:
   email:
@@ -53,17 +53,13 @@ install:
 
 stages:
   - name: build
-    if:  branch = master
   - name: test
-    if:  branch = master
   - name: scan
-    if: branch = master
   - name: gradle
-    if: branch = master
   - name: snappah
-    if:  branch = master AND NOT type = pull_request
+    if: type != pull_request OR branch =~ ^(.*-test-deploy)$
   - name: hyrax-docker-trigger
-    if:  branch = master AND NOT type = pull_request
+    if: type != pull_request OR branch =~ ^(.*-test-deploy)$
 
 # caching for gradle
 before_cache:
@@ -246,7 +242,7 @@ deploy:
     skip_cleanup: true
     local_dir: $TRAVIS_BUILD_DIR/package
     on:
-      branch: master
+      all_branches: true
       condition: $STAGE =~ ^snappah$
 
 
