--- a/.travis.yml
+++ b/.travis.yml
@@ -94,14 +94,14 @@ jobs:
 
     - stage: build
       name: "jdk11"
-      jdk: openjdk11
+      #jdk: openjdk11
       script:
         - export STAGE=build
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
 
     - stage: build
       name: "gradle (jdk11)"
-      jdk: openjdk11
+      #jdk: openjdk11
       script:
         - export STAGE=build
         - ./gradlew --version
@@ -124,14 +124,14 @@ jobs:
 
     - stage: test
       name: "jdk11"
-      jdk: openjdk11
+      #jdk: openjdk11
       script:
         - export STAGE=test
         - ant check
 
     - stage: scan
       name: "sonarscan (jdk11)"
-      jdk: openjdk11
+      #jdk: openjdk11
       addons: sonarcloud
       script:
         - export STAGE=scan
@@ -141,7 +141,7 @@ jobs:
 
     - stage: scan
       name: "synk (jdk11)"
-      jdk: openjdk11
+      #jdk: openjdk11
       script:
         - export STAGE=scan
         - echo $STAGE
@@ -149,7 +149,7 @@ jobs:
 
     - stage: gradlescan
       name: "gradle sonarscan (jdk11)"
-      jdk: openjdk11
+      #jdk: openjdk11
       script:
         - export STAGE=scan
         - ./gradlew buildDists sonarqube -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.wait=true
