--- a/.travis.yml
+++ b/.travis.yml
@@ -134,6 +134,9 @@ jobs:
       #jdk: openjdk11
       addons: sonarcloud
       script:
+        - echo "###################################"
+        - java -version
+        - echo "###################################"
         - export STAGE=scan
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
         - ant sonar -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.wait=true
