--- a/.travis.yml
+++ b/.travis.yml
@@ -134,9 +134,10 @@ jobs:
       #jdk: openjdk11
       addons: sonarcloud
       script:
-        - echo "###################################"
-        - java -version
-        - echo "###################################"
+        - echo "#--#--#--#--#--#--#--#--#--#--#--#--#--#--#--#--#" >&2
+        - echo "Checking java version..." >&2
+        - java -version >&2
+        - echo "#--#--#--#--#--#--#--#--#--#--#--#--#--#--#--#--#" >&2
         - export STAGE=scan
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
         - ant sonar -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.wait=true
