--- a/.travis.yml
+++ b/.travis.yml
@@ -90,14 +90,14 @@ jobs:
       jdk: openjdk8
       script:
         - export STAGE=build
-        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+        - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
 
     - stage: build
       name: "jdk11"
       #jdk: openjdk11
       script:
         - export STAGE=build
-        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+        - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
 
     - stage: build
       name: "gradle (jdk11)"
@@ -113,31 +113,27 @@ jobs:
       jdk: openjdk7
       script:
         - export STAGE=test
-        - ant check
+        - ant show check
 
     - stage: test
       name: "jdk8"
       jdk: openjdk8
       script:
         - export STAGE=test
-        - ant check
+        - ant show check
 
     - stage: test
       name: "jdk11"
       #jdk: openjdk11
       script:
         - export STAGE=test
-        - ant check
+        - ant show check
 
     - stage: scan
       name: "sonarscan (jdk11)"
       #jdk: openjdk11
       addons: sonarcloud
       script:
-        - echo "#--#--#--#--#--#--#--#--#--#--#--#--#--#--#--#--#" >&2
-        - echo "Checking java version..." >&2
-        - java -version >&2
-        - echo "#--#--#--#--#--#--#--#--#--#--#--#--#--#--#--#--#" >&2
         - export STAGE=scan
         - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
         - ant -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.wait=true show sonar
