--- a/.travis.yml
+++ b/.travis.yml
@@ -49,9 +49,10 @@ env:
 before_install:
   - echo "#######################################################"
   - echo "Install JDK-11"
-  - curl -s "https://get.sdkman.io" | bash
-  - source "$HOME/.sdkman/bin/sdkman-init.sh"
-  - sdk install java 11.0.12-open
+  - curl https://raw.githubusercontent.com/sormuras/bach/releases/11/install-jdk.sh > install-jdk.sh
+  - chmod +x ./install-jdk.sh
+  - export JAVA_HOME=$HOME/openjdk11
+  - ./install-jdk.sh -F 11 --target $JAVA_HOME
   - java -version
   - echo "#######################################################"
 
