--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,16 @@ env:
     # SNYK_TOKEN
     - secure: "A+Ll8E9FlU0B4qAYb9GTmuCFgY0RstSXiJqTuXcEmej/ppalCvCXN4t+Ss3fyy4zF3NbNh54kVhnZOL3/bDe8VihvL48MbftCfdq4kmE3UdYqdTjs6vqGl0g1UkMqdGq/uvxPhBM0ggMM1EO9aN03OtCnEehcnKtwqKVdOGzQg4="
 
+before_install:
+  - echo "#######################################################"
+  - echo "Install JDK-11"
+  - curl https://raw.githubusercontent.com/sormuras/bach/releases/11/install-jdk.sh > install-jdk.sh
+  - chmod +x ./install-jdk.sh
+  - export JAVA_HOME=$HOME/openjdk11
+  - ./install-jdk.sh -F 11 --target $JAVA_HOME
+  - java -version
+  - echo "#######################################################"
+
 install:
   - nvm install 12.13.0
   - npm install -g snyk
@@ -81,18 +91,18 @@ jobs:
       jdk: openjdk8
       script:
         - export STAGE=build
-        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+        - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
 
     - stage: build
       name: "jdk11"
-      jdk: openjdk11
+      #jdk: openjdk11
       script:
         - export STAGE=build
-        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+        - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
 
     - stage: build
       name: "gradle (jdk11)"
-      jdk: openjdk11
+      #jdk: openjdk11
       script:
         - export STAGE=build
         - ./gradlew --version
@@ -104,35 +114,35 @@ jobs:
       jdk: openjdk7
       script:
         - export STAGE=test
-        - ant check
+        - ant show check
 
     - stage: test
       name: "jdk8"
       jdk: openjdk8
       script:
         - export STAGE=test
-        - ant check
+        - ant show check
 
     - stage: test
       name: "jdk11"
-      jdk: openjdk11
+      #jdk: openjdk11
       script:
         - export STAGE=test
-        - ant check
+        - ant show check
 
     - stage: scan
       name: "sonarscan (jdk11)"
-      jdk: openjdk11
+      #jdk: openjdk11
       addons: sonarcloud
       script:
         - export STAGE=scan
-        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-        - ant sonar -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.wait=true
+        - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
+        - ant -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.timeout=570 -Dsonar.qualitygate.wait=true show sonar
         - curl -s https://sonarcloud.io/api/project_badges/quality_gate?project=opendap-olfs | grep "QUALITY GATE PASS"
 
     - stage: scan
       name: "synk (jdk11)"
-      jdk: openjdk11
+      #jdk: openjdk11
       script:
         - export STAGE=scan
         - echo $STAGE
@@ -140,10 +150,10 @@ jobs:
 
     - stage: gradlescan
       name: "gradle sonarscan (jdk11)"
-      jdk: openjdk11
+      #jdk: openjdk11
       script:
         - export STAGE=scan
-        - ./gradlew buildDists sonarqube -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.wait=true
+        - ./gradlew buildDists sonarqube -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.timeout=570 -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.wait=true
         - curl -s https://sonarcloud.io/api/project_badges/quality_gate?project=opendap-olfs | grep "QUALITY GATE PASS"
 
     - stage: snappah
