--- a/.travis.yml
+++ b/.travis.yml
@@ -46,15 +46,15 @@ env:
     # SNYK_TOKEN
     - secure: "A+Ll8E9FlU0B4qAYb9GTmuCFgY0RstSXiJqTuXcEmej/ppalCvCXN4t+Ss3fyy4zF3NbNh54kVhnZOL3/bDe8VihvL48MbftCfdq4kmE3UdYqdTjs6vqGl0g1UkMqdGq/uvxPhBM0ggMM1EO9aN03OtCnEehcnKtwqKVdOGzQg4="
 
-before_install:
-  - echo "#######################################################"
-  - echo "Install JDK-11"
-  - curl https://raw.githubusercontent.com/sormuras/bach/releases/11/install-jdk.sh > install-jdk.sh
-  - chmod +x ./install-jdk.sh
-  - export JAVA_HOME=$HOME/openjdk11
-  - ./install-jdk.sh -F 11 --target $JAVA_HOME
-  - java -version
-  - echo "#######################################################"
+# before_install:
+#  - echo "#######################################################"
+#  - echo "Install JDK-11"
+#  - curl https://raw.githubusercontent.com/sormuras/bach/releases/11/install-jdk.sh > install-jdk.sh
+#  - chmod +x ./install-jdk.sh
+#  - export JAVA_HOME=$HOME/openjdk11
+#  - ./install-jdk.sh -F 11 --target $JAVA_HOME
+#  - java -version
+#  - echo "#######################################################"
 
 install:
   - nvm install 12.13.0
@@ -95,14 +95,14 @@ jobs:
 
     - stage: build
       name: "jdk11"
-      #jdk: openjdk11
+      jdk: openjdk11
       script:
         - export STAGE=build
         - ant -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build show server
 
     - stage: build
       name: "gradle (jdk11)"
-      #jdk: openjdk11
+      jdk: openjdk11
       script:
         - export STAGE=build
         - ./gradlew --version
@@ -125,14 +125,14 @@ jobs:
 
     - stage: test
       name: "jdk11"
-      #jdk: openjdk11
+      jdk: openjdk11
       script:
         - export STAGE=test
         - ant show check
 
     - stage: scan
       name: "sonarscan (jdk11)"
-      #jdk: openjdk11
+      jdk: openjdk11
       addons: sonarcloud
       script:
         - export STAGE=scan
@@ -142,7 +142,7 @@ jobs:
 
     - stage: scan
       name: "synk (jdk11)"
-      #jdk: openjdk11
+      jdk: openjdk11
       script:
         - export STAGE=scan
         - echo $STAGE
@@ -150,7 +150,7 @@ jobs:
 
     - stage: gradlescan
       name: "gradle sonarscan (jdk11)"
-      #jdk: openjdk11
+      jdk: openjdk11
       script:
         - export STAGE=scan
         - travis_wait 30 ./gradlew buildDists sonarqube -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.timeout=1800 -Dsonar.login=$SONAR_LOGIN -Dsonar.qualitygate.wait=true
