--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 # Initial Travic-CI control file. 6.11.15 jhrg
 # Added sonar scan 3.12.19 jhrg 
 
-dist: trusty
+dist: focal
 
 # Use the docker container-based build systems
 sudo: false
