--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 # Initial Travic-CI control file. 6.11.15 jhrg
 # Added sonar scan 3.12.19 jhrg 
 
-dist: bionic
+dist: focal
 
 # Use the docker container-based build systems
 sudo: false
@@ -28,6 +28,7 @@ addons:
   apt:
     packages:
       - awscli
+      - ant
       - junit
 
 env:
