--- a/.travis.yml
+++ b/.travis.yml
@@ -63,6 +63,7 @@ install:
   - npm install -g snyk
   - npm install -g snyk-gradle-plugin
   - dpkg -L junit
+  - dpkg -L ant
 
 # We need the gradlescan target because we can't run simultaneous
 # sonarscans without encountering a race condition at sonarcloud.io
