--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ addons:
     packages:
       - awscli
       - ant
-      - junit
+#      - junit
 
 env:
   global:
@@ -62,7 +62,7 @@ install:
   - nvm install 12.13.0
   - npm install -g snyk
   - npm install -g snyk-gradle-plugin
-  - dpkg -L junit
+#  - dpkg -L junit
   - dpkg -L ant
 
 # We need the gradlescan target because we can't run simultaneous
