--- a/build.xml
+++ b/build.xml
@@ -180,6 +180,16 @@
         <echo level="info" message="               DOC_DIST: ${DOC_DIST}"/>
         <echo level="info" message="               OLFS_LIB: ${OLFS_LIB}"/>
         <echo level="info" message=""/>
+        <echo level="info" message="----------------------------------------------------------"/>
+        <echo level="info" message="       Operating System: ${os.name}"/>
+        <echo level="info" message="            Arcitecture: ${os.arch}"/>
+        <echo level="info" message="                Version: ${os.version}"/>
+        <echo level="info" message="       sun.java.command: ${sun.java.command}"/>
+        <echo level="info" message="               ANT_OPTS: ${ANT_OPTS}"/>
+        <echo level="info" message="Calling echoproperties task"/>
+        <echoproperties  />
+        <echo level="info" message=""/>
+        <echo level="info" message="##########################################################"/>
 
     </target>
 
@@ -803,14 +813,15 @@
     <property name="sonar.projectVersion" value="${OLFS_VERSION}" />
     <property name="sonar.organization" value="opendap" />
     <property name="sonar.sources" value="src" />
-    <property name="sonar.exclusions" value="src/opendap/experiments/**/*.java,src/opendap/metacat/**/*.java,src/opendap/aws/**/*.java,src/opendap/noaa_s3/**/*.java" />
+    <property name="sonar.exclusions" value="retired/**/*.java" />
     <property name="sonar.java.binaries" value="build" />
     <property name="sonar.java.libraries" value="lib/*.jar" />
 
     <!-- Define SonarQube Scanner for Ant Target -->
     <target name="sonar">
         <taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml">
-            <classpath path="resources/sonar/sonarqube-ant-task-2.6.0.1426.jar" />
+            <!-- classpath path="resources/sonar/sonarqube-ant-task-2.6.0.1426.jar" / -->
+            <classpath path="resources/sonar/sonarqube-ant-task-2.7.1.1951.jar" />
         </taskdef>
         <!-- taskdef uri="antlib:org.sonar.ant" resource="org/sonar/ant/antlib.xml" / -->
         <!-- Execute SonarQube Scanner for Ant Analysis -->
