--- a/build.xml
+++ b/build.xml
@@ -282,6 +282,7 @@
     <property name="jaxb-api.lib" value="jaxb-api-2.3.1.jar"/>
     <property name="jaxb-core.lib" value="jaxb-core-2.3.0-b170127.1453.jar"/>
     <property name="jaxb-impl.lib" value="jaxb-impl-2.3.0-b170127.1453.jar"/>
+    <property name="jaxb-runtime.lib" value="jaxb-runtime-2.3.6.jar"/>
     <property name="xlink.lib" value="xlink-v_1_0-1.4.0.jar"/>
 
 
@@ -330,6 +331,7 @@
         <include name="${jaxb-api.lib}"/>
         <include name="${jaxb-core.lib}"/>
         <include name="${jaxb-impl.lib}"/>
+        <include name="${jaxb-runtime.lib}"/>
         <include name="${xlink.lib}"/>
     </fileset>
 
