--- a/build.xml
+++ b/build.xml
@@ -283,7 +283,8 @@
     <property name="jaxb-core.lib" value="jaxb-core-2.3.0-b170127.1453.jar"/>
     <property name="jaxb-impl.lib" value="jaxb-impl-2.3.0-b170127.1453.jar"/>
     <property name="jaxb-runtime.lib" value="jaxb-runtime-2.3.6.jar"/>
-    <property name="javax.annotation-api" value="javax.annotation-api-1.3.2.jar"/>
+    <property name="javax.annotation-api.lib" value="javax.annotation-api-1.3.2.jar"/>
+    <property name="javax.activation.lib" value="activation-1.1.1.jar"/>
 
     <property name="xlink.lib" value="xlink-v_1_0-1.4.0.jar"/>
 
@@ -334,7 +335,8 @@
         <include name="${jaxb-core.lib}"/>
         <include name="${jaxb-impl.lib}"/>
         <include name="${jaxb-runtime.lib}"/>
-        <include name="${javax.annotation-api}"/>
+        <include name="${javax.annotation-api.lib}"/>
+        <include name="${javax.activation.lib}"/>
         <include name="${xlink.lib}"/>
     </fileset>
 
