--- a/build.gradle
+++ b/build.gradle
@@ -198,6 +198,7 @@ dependencies {
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     providedCompile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
 
+
     implementation group: 'org.jdom', name: 'jdom', version: '1.1.3'
 
     implementation group: 'org.tuckey', name: 'urlrewritefilter', version: '3.2.0'
@@ -239,6 +240,12 @@ dependencies {
     implementation group: 'org.jvnet.ogc', name: 'sweCommon-v_2_0', version: '2.6.1'
     implementation group: 'org.jvnet.ogc', name: 'gmlcov-v_1_0', version: '2.6.1'
     implementation group: 'org.jvnet.ogc', name: 'ows-v_2_0', version: '2.6.1'
+
+
+    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
+    implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '2.3.6'
+    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
 
     implementation group: 'org.jvnet.jaxb2_commons', name: 'jaxb2-basics-runtime', version: '0.11.0'
     implementation group: 'com.sun.xml.bind', name: 'jaxb-api', version: '2.3.1'
