--- a/build.xml
+++ b/build.xml
@@ -77,8 +77,8 @@
     <property name="compile.debuglevel" value="lines,vars,source"/>
     <property name="compile.deprecation" value="on"/>
 
-    <property name="compile.TARGET" value="1.7"/>
-    <property name="compile.SOURCE" value="1.7"/>
+    <property name="compile.TARGET" value="1.8"/>
+    <property name="compile.SOURCE" value="1.8"/>
 
 
     <property name="modern.compiler" value="modern"/>
@@ -282,6 +282,10 @@
     <property name="jaxb-api.lib" value="jaxb-api-2.3.1.jar"/>
     <property name="jaxb-core.lib" value="jaxb-core-2.3.0-b170127.1453.jar"/>
     <property name="jaxb-impl.lib" value="jaxb-impl-2.3.0-b170127.1453.jar"/>
+    <property name="jaxb-runtime.lib" value="jaxb-runtime-2.3.6.jar"/>
+    <property name="javax.annotation-api.lib" value="javax.annotation-api-1.3.2.jar"/>
+    <property name="javax.activation.lib" value="activation-1.1.1.jar"/>
+
     <property name="xlink.lib" value="xlink-v_1_0-1.4.0.jar"/>
 
 
@@ -330,6 +334,9 @@
         <include name="${jaxb-api.lib}"/>
         <include name="${jaxb-core.lib}"/>
         <include name="${jaxb-impl.lib}"/>
+        <include name="${jaxb-runtime.lib}"/>
+        <include name="${javax.annotation-api.lib}"/>
+        <include name="${javax.activation.lib}"/>
         <include name="${xlink.lib}"/>
     </fileset>
 
