Dropped awscli from travis host, add gnupg

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ addons:
   # ssh_known_hosts: www.opendap.org
   apt:
     packages:
-      - awscli
       - ant
+      - gnupg
 #      - junit
 
 env:
